@@ -142,6 +142,8 @@ return array(
 	'tx_solr_scheduler_indexqueueworkertaskadditionalfieldprovider' => $extensionPath . 'scheduler/class.tx_solr_scheduler_indexqueueworkertaskadditionalfieldprovider.php',
 	'tx_solr_scheduler_optimizetask' => $extensionPath . 'scheduler/class.tx_solr_scheduler_optimizetask.php',
 	'tx_solr_scheduler_optimizetasksolrserverfield' => $extensionPath . 'scheduler/class.tx_solr_scheduler_optimizetasksolrserverfield.php',
+	'tx_solr_scheduler_reindextask' => $extensionPath . 'scheduler/class.tx_solr_scheduler_reindextask.php',
+	'tx_solr_scheduler_reindextasksolrserverfield' => $extensionPath . 'scheduler/class.tx_solr_scheduler_reindextasksolrserverfield.php',
 
 		// reports
 
